Wrap all non-generic json responses
